SERVER-12583 DBClientRS shouldn't use hosts the RSM thinks are down.

Also commented and ordered checks from cheapest to most expensive in
DBClientRS::checkLastHost.